crates/oxc_css_parser/tests/recoverable/eof/unclosed-brace-in-value.css.error.snap
---
source: crates/oxc_css_parser/tests/recoverable.rs
---
error: unclosed block before end of file
  ┌─ unclosed-brace-in-value.css:2:8
  │
2 │   --x: {
  │        ^

error: unclosed block before end of file
  ┌─ unclosed-brace-in-value.css:1:3
  │
1 │ a {
  │   ^
